# GroupProjectACTAIEngine

./: .gitignore  pyproject.toml
reports/: AAPL.md  AMD.md  AMZN.md  BNB.md  BTC.md  ETH.md  GOOGL.md  MSFT.md  NVDA.md  SOL.md  TSLA.md  XRP.md
src/testing/: crew.py  main.py  serve.py
src/testing/config/: agents.yaml  tasks.yaml
